fix bug in which the openAPI spec wouldn't generate error codes
